Creating basic structure

--- a/Proj_2/manual.tex
+++ b/Proj_2/manual.tex
@@ -30,6 +30,10 @@
 Sabína Gregušová}
 \end{titlepage}
 
+\tableofcontents
+\clearpage
 
+\section{Úvod}
+Mojou úlohou bolo vytvoriť scanner sieťových služieb TCP a UDP v jazyku C alebo C++ a na štandartný výstup vypíše v akom stave sa dané porty nachádzajú.
 
 \end{document}
