Working on UDP protocol

--- a/Proj_2/manual.tex
+++ b/Proj_2/manual.tex
@@ -44,10 +44,11 @@ Najnáročnejšou časťou projektu bolo určite správne odosielanie paketov. C
 
 \subsection{TCP skenovanie}
 
+
 \subsection{UDP skenovanie}
 
 \section{Testovanie}
-Kvôli náročnosti projektu mi už nezostal čas na vytvorenie automatických testov 
+Kvôli náročnosti projektu mi už nezostal čas na vytvorenie automatických testov. Projekt bol preto testovaný iba ručne 
 
 \section{Záver}
 Tento projekt považujem za jeden z najnáročnejších projektov na FIT VUT. So sieťami som pred tým nemala vôbec žiadne skúsenosti a hoci mi učivo prišlo veľmi zaujímavé a podstate zadania som rozumela, bolo veľmi náročné zistiť ako všetko v jazyku C/C++ funguje.
