--- a/Proj_2/manual.tex
+++ b/Proj_2/manual.tex
@@ -41,7 +41,7 @@ Mojou úlohou bolo vytvoriť scanner sieťových služieb TCP a UDP v jazyku C a
 Rozhodla som sa použiť jazyk C++ a využiť jeho objektovú orientáciu. Nepoužila som funkciu na automatické parsovanie argumentov \texttt{getopt()}, pretože s ňou nemám dobré skúsenosti a preto som si vytvorila triedu, v ktorej si preparsujem vstupné argumenty sama. Pre lepšiu manipuláciu so vstupnými dátami som si vytvorila štruktúru \texttt{Ports}, ktorú používam pre oba protokoly TCP a UDP. Štruktúra \texttt{Ports} obsahuje zoznam portov, destination IP, source IP, názov interfacu, názov domény a flagy.
 
 \subsection{Parsovanie argumentov}
-Pri spracovávaní argumentov som brala do úvahy, že na poradí argumentov nezáleží, a preto som rozhodovala o význame argumentu podľa jeho prepínača. Každý argument okrem IP adresy alebo domény má svoj prepínač. Pri zadaní akéhokoľvek argumetu bol daný argument hneď spracovaný a uložený do štruktúry \texttt{Ports}. Najzaujímavejčšou časťou tejto imeplementáie je parsovanie IP adresy alebo domény a interfacu. Keďže je na užívateľovi, či zadá IP adresu alebo doménu, je potrebné zistiť čo bolo zadané a taktiež zistiť chýbajúci druhý údaj. Toto kontrolu robím pomocou regulárnych výrazov, kedy porovnám, či je daný údaj vo formáte \texttt{IPv4} alebo \texttt{IPv6} a ak ani jeden regulárny výraz neuspeje, považujem údaj za doménu a naopak. Interface je nepovinný argument, preto sa defaultne použije interface, ktorý je neloopbackový. Ak je interface zadaný, aj tak sa vykoná kontrola, či je zadaný interface neloopbackový a je možné použiť ho. 
+Pri spracovávaní argumentov som brala do úvahy, že na poradí argumentov nezáleží, a preto som rozhodovala o význame argumentu podľa jeho prepínača. Každý argument okrem IP adresy alebo domény má svoj prepínač. Pri zadaní akéhokoľvek argumetu bol daný argument hneď spracovaný a uložený do štruktúry \texttt{Ports}. Najzaujímavejčšou časťou tejto imeplementáie je parsovanie IP adresy alebo domény a interfacu. Keďže je na užívateľovi, či zadá IP adresu alebo doménu, je potrebné zistiť čo bolo zadané a taktiež zistiť chýbajúci druhý údaj. Toto kontrolu robím pomocou regulárnych výrazov, kedy porovnám, či je daný údaj vo formáte \texttt{IPv4} alebo \texttt{IPv6} a ak ani jeden regulárny výraz neuspeje, považujem údaj za doménu a naopak. Interface je nepovinný argument, preto sa defaultne použije interface, ktorý je neloopbackový. 
 
 \subsection{Odosielanie paketov}
 raw sockety, o ktorých ale na internete nie je veľa informácií ktoré by boli použiteľné a aj funkčné. Za najprínosnejší zdroj pre TCP protokol považujem \cite{tcp_tenouk}, pretože sa zameriava práve na problematiku odosielania raw paketov a správnej tvorby IP a TCP hlavičky. Rovnaká stránka veľmi dobre poslúžila aj s článkom o \cite{udp_tenouk} o UDP, podľa ktorej som vyplnila IP a UDP hlavičku. 
@@ -72,6 +72,8 @@ Na zachytávanie paketov som využila knižnicu \texttt{pcap} a logickú štrukt
 Kvôli náročnosti projektu mi už bohužiaľ nezostal čas na vytvorenie automatických testov. Projekt som však aktívne testovala už počas implementácie. Pri odosielaní a prijímaní paketov som najčastejšie využívala  program \texttt{Wireshark}, kde som sledovala správnosť paketov, úspečnosť ich odoslania a taktiež to, či daná doména aj odpovedá. Pri overovaní správnosti vyhodnotenia portov som využívala program \texttt{Nmap} od Gordona Lyona, ktorý prijíma na vstupe doménu a porty ktoré chceme vyhodnotiť a určí či sú dané porty otvorené, filtrované, alebo uzavreté.
 
 \section{Ukážka}
+Keďže je potrebné spúštať tento program ako administrátor, nasledujúca ukážka je zo spustenia na mojom počítači s operačným systémom Ubuntu.\\
+
 \texttt{vstup:} \\
 \texttt{sudo ./ipk-scan -pt 21,22,143 -pu 53,67 wis.fit.vutbr.cz}\\
 
